--- a/src/client/index.html
+++ b/src/client/index.html
@@ -56,7 +56,7 @@
         background: linear-gradient(45deg, #fad0c4, #ff9a9e);
       }
     </style>
-    <script async defer src="assets/app.js"></script>
+    <script async defer src="assets/app-__HASH__.js"></script>
   </head>
   <body>
     <div id="app"></div>
