--- a/src/client/index.html
+++ b/src/client/index.html
@@ -56,6 +56,10 @@
         background: linear-gradient(45deg, #fad0c4, #ff9a9e);
       }
     </style>
+    <!-- 
+      Did not choose <base> tag because it created a too deep dependency and
+      this has the same value.
+    -->
     <script async defer src="assets/app-__HASH__.js"></script>
   </head>
   <body>
