--- a/A2.3.html
+++ b/A2.3.html
@@ -24,8 +24,7 @@
     <main>
       <h2>Popups</h2>
 
-      <a href="https://abc.com">abc</a>
-      <div class="red-circle" onclick="displayMenu()"></div>
+      <button class="red-circle" onclick="displayMenu()">Show popup</button>
     </main>
 
     <script type="module" src="A2.3.js"></script>
