--- a/drawer/index.html
+++ b/drawer/index.html
@@ -24,6 +24,10 @@
       <ul class="tools"></ul>
 
       <canvas id="drawArea" width="1024" height="768"></canvas>
+      <div class="event-stream-container">
+        <textarea id="eventStream" rows="10" cols="80"></textarea>
+        <button id="loadEventsButton">Load Events</button>
+      </div>
     </div>
   </body>
 </html>
