--- a/drawer/index.html
+++ b/drawer/index.html
@@ -20,6 +20,7 @@
         Maustaste die Form bestimmen, und dann anschließend die Maustaste
         loslassen.
       </p>
+      <p>Mit shift kann man die Shapes verschieben.</p>
 
       <ul class="tools"></ul>
 
