--- a/drawer/index.html
+++ b/drawer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Zeichenpogramm</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <script src="dist/drawer.js" type="module"></script>
+    <script src="dist/index.js" type="module"></script>
     <link rel="stylesheet" href="context.css" />
   </head>
 
@@ -12,23 +12,6 @@
     <!-- Required by context.js -->
     <div id="teleport"></div>
     <div id="shadow-box"></div>
-    <div>
-      <p>
-        Wählen Sie auf der linken Seite Ihr Zeichenwerkzeug aus. Haben Sie eines
-        ausgewählt, können Sie mit der Maus die entsprechenden Figuren zeichnen.
-        Typischerweise, indem Sie die Maus drücken, dann mit gedrückter
-        Maustaste die Form bestimmen, und dann anschließend die Maustaste
-        loslassen.
-      </p>
-      <p>Mit shift kann man die Shapes verschieben.</p>
-
-      <ul class="tools"></ul>
-
-      <canvas id="drawArea" width="1024" height="500"></canvas>
-      <div class="event-stream-container">
-        <textarea id="eventStream" rows="10" cols="130"></textarea>
-        <button id="loadEventsButton">Load Events</button>
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
