--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Zeichenpogramm</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="static/style.css" type="text/css" />
     <script src="dist/index.js" type="module"></script>
-    <link rel="stylesheet" href="context.css" />
+    <link rel="stylesheet" href="static/context.css" />
   </head>
 
   <body>
