--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,9 @@
         <!-- Nav items will be rendered by JS -->
       </ul>
       <div class="navbar-user">
-        <span id="navbar-user-info">Gast</span>
+        <button id="navbar-user-info" class="user-info-btn" disabled>
+          User Info
+        </button>
         <button id="logout-btn" style="display: none; margin-left: 1em">
           Logout
         </button>
